# BreakOut

./: .clang-format  .editorconfig  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
App/: App.cpp  App.hpp
Game/: Ball.cpp  Ball.hpp  Block.cpp  Block.hpp  BoundaryEdge.hpp  Breakout.cpp  Breakout.hpp  Excluder.cpp  Excluder.hpp  Game.hpp  GameLevel.cpp  GameLevel.hpp  LevelBoundary.cpp  LevelBoundary.hpp  Paddle.cpp  Paddle.hpp
Graphic/: Color.cpp  Color.hpp  Screen.cpp  Screen.hpp  ScreenBuffer.cpp  ScreenBuffer.hpp
Input/: GameController.cpp  GameController.hpp  InputAction.hpp  InputController.cpp  InputController.hpp
Scenes/: GameScene.cpp  GameScene.hpp  MainScene.cpp  MainScene.hpp  Scene.hpp
Shapes/: AaRectangle.cpp  AaRectangle.hpp  Circle.cpp  Circle.hpp  Line2D.cpp  Line2D.hpp  Shape.cpp  Shape.hpp
Utils/: Screen.cpp  Screen.hpp  ScreenBuffer.cpp  Utils.cpp  Utils.hpp  Vec2D.cpp  Vec2D.hpp
cmake/: FindSDL2.cmake
tests/: test_aarectangle.cpp  test_circle.cpp  test_line2d.cpp  test_main.cpp  test_utils.cpp  test_vec2d.cpp
